hphp/test/zend/good/ext/standard/tests/strings/str_word_count1.php
<?php

var_dump(str_word_count(""));
var_dump(str_word_count("", -1));
var_dump(str_word_count("", -1, $a));
var_dump($a);

echo "Done\n";
?>